# greedy_grasp_ant

./: .gitignore  .travis.yml  02matrizn100m20.dat.csv  03matrizn100m30.dat.csv  04matrizn100m40.dat.csv  07matrizn200m60.dat.csv  09matrizn300m30.dat.csv  17matrizn500m50.dat.csv  18matrizn500m100.dat.csv  19matrizn500m150.dat.csv  20matrizn500m200.dat.csv  21matrizn600m10.dat.csv  22matrizn600m20.dat.csv  24matrizn600m40.dat.csv  30matrizn800m60.dat.csv  33matrizn900m40.dat.csv  34matrizn900m80.dat.csv  35matrizn900m120.dat.csv  36matrizn900m160.dat.csv  38matrizn1000m100.dat.csv  39matrizn1000m150.dat.csv  CMakeLists.txt  README.md  Untitled.ipynb  concat.csv  multiproc.py  requirements.txt  sonar-project.properties  tmp.csv  travis_cmake.txt
linux/: CMakeCache.txt  Makefile  cmake_install.cmake  greedy_grasp_ant
scores/: 01matrizn100m10.dat.csv  02matrizn100m20.dat.csv  03matrizn100m30.dat.csv  04matrizn100m40.dat.csv  05matrizn200m20.dat.csv  06matrizn200m40.dat.csv  07matrizn200m60.dat.csv  08matrizn200m80.dat.csv  09matrizn300m30.dat.csv  10matrizn300m60.dat.csv  11matrizn300m90.dat.csv  12matrizn300m120.dat.csv  13matrizn400m40.dat.csv  14matrizn400m80.dat.csv  15matrizn400m120.dat.csv  16matrizn400m160.dat.csv  17matrizn500m50.dat.csv  18matrizn500m100.dat.csv  19matrizn500m150.dat.csv  20matrizn500m200.dat.csv  21matrizn600m10.dat.csv  22matrizn600m20.dat.csv  23matrizn600m30.dat.csv  24matrizn600m40.dat.csv  25matrizn700m20.dat.csv  26matrizn700m40.dat.csv  27matrizn700m60.dat.csv  28matrizn700m80.dat.csv  29matrizn800m30.dat.csv  30matrizn800m60.dat.csv  (+11 more)
(+31 files in other folders)
